log
Sat 22 Apr 2023 11:44:50 AM UTC: 
 tests:  1|8
total_score: 0/70
54bf5ca
Sat 22 Apr 2023 11:09:08 PM UTC: 
 treemap.c | 60 +++++++++++++++++++++++-------------------------------------
 1 file changed, 23 insertions(+), 37 deletions(-)
 tests:  4|7
total_score: 5/70
bf87534
Sat 22 Apr 2023 11:17:20 PM UTC: 
 treemap.c | 49 ++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 48 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c:99:11: error: redefinition of ‘minimum’
   99 | TreeNode *minimum(TreeNode *x) { return NULL; }
      |           ^~~~~~~
treemap.c:87:11: note: previous definition of ‘minimum’ with type ‘TreeNode *(TreeNode *)’
   87 | TreeNode *minimum(TreeNode *x) {
      |           ^~~~~~~
Compilation failed
f7d8fc4
Sat 22 Apr 2023 11:17:36 PM UTC: 
 treemap.c | 28 ++++++++++++++++++----------
 1 file changed, 18 insertions(+), 10 deletions(-)
In file included from test.c:4:
treemap.c:108:11: error: redefinition of ‘minimum’
  108 | TreeNode *minimum(TreeNode *x) { return NULL; }
      |           ^~~~~~~
treemap.c:95:12: note: previous definition of ‘minimum’ with type ‘TreeNode *(TreeNode *)’
   95 | TreeNode * minimum(TreeNode * x){
      |            ^~~~~~~
Compilation failed
de9f245
Sat 22 Apr 2023 11:21:34 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c:100:11: error: redefinition of ‘minimum’
  100 | TreeNode *minimum(TreeNode *x) { return NULL; }
      |           ^~~~~~~
treemap.c:88:11: note: previous definition of ‘minimum’ with type ‘TreeNode *(TreeNode *)’
   88 | TreeNode *minimum(TreeNode *x) {
      |           ^~~~~~~
Compilation failed
f6515a9
Sat 22 Apr 2023 11:22:16 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c:100:11: error: redefinition of ‘minimum’
  100 | TreeNode *minimum(TreeNode *x) {}
      |           ^~~~~~~
treemap.c:88:11: note: previous definition of ‘minimum’ with type ‘TreeNode *(TreeNode *)’
   88 | TreeNode *minimum(TreeNode *x) {
      |           ^~~~~~~
treemap.c: In function ‘minimum’:
treemap.c:100:33: error: control reaches end of non-void function [-Werror=return-type]
  100 | TreeNode *minimum(TreeNode *x) {}
      |                                 ^
cc1: all warnings being treated as errors
Compilation failed
6347a33
Sat 22 Apr 2023 11:24:46 PM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  8|5
total_score: 15/70
3d67eb0
Sat 22 Apr 2023 11:27:44 PM UTC: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  8|5
total_score: 15/70
365f987
Sat 22 Apr 2023 11:28:50 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  8|5
total_score: 15/70
ae8c834
